@@ -1,6 +1,8 @@
 package org.jzy3d.demos.surface;
 
-import static jdk.incubator.foreign.CLinker.C_INT;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 import org.jzy3d.chart.Chart;
 import org.jzy3d.chart.factories.ChartFactory;
 import org.jzy3d.chart.factories.PanamaGLChartFactory;
@@ -14,9 +16,7 @@ import org.jzy3d.plot3d.builder.SurfaceBuilder;
 import org.jzy3d.plot3d.builder.concrete.OrthonormalGrid;
 import org.jzy3d.plot3d.primitives.Shape;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
-import opengl.macos.v10_15_3.glut_h;
+import opengl.ubuntu.v20.glut_h;
 
 
 /**
@@ -24,7 +24,7 @@ import opengl.macos.v10_15_3.glut_h;
  *
  * @author Martin Pernollet
  * 
- * --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/usr/lib/x86_64-linux-gnu/
+ * --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=.:/usr/lib/x86_64-linux-gnu/
  *
  */
 public class SurfaceDemoPanamaGL_Ubuntu {
@@ -34,12 +34,13 @@ public class SurfaceDemoPanamaGL_Ubuntu {
   public static void main(String[] args) {
       // loading GL manually
       System.loadLibrary("GL");
-      System.load("/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT");
+      //System.loadLibrary("GL");
+      //System.load("/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT");
 
       // https://github.com/jzy3d/panama-gl/issues/16
-      var scope = ResourceScope.newConfinedScope();
-      var allocator = SegmentAllocator.ofScope(scope);
-      var argc = allocator.allocate(C_INT, 0);
+      var scope = MemorySession.openConfined();
+      var allocator = SegmentAllocator.newNativeArena(scope);
+      var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
       glut_h.glutInit(argc, argc);
 
     
