@@ -1,13 +1,14 @@
 package org.jzy3d.painters;
 
-import static jdk.incubator.foreign.CLinker.C_DOUBLE;
-import static jdk.incubator.foreign.CLinker.C_FLOAT;
-import static jdk.incubator.foreign.CLinker.C_INT;
 import java.awt.Component;
 import java.awt.FontMetrics;
 import java.awt.Graphics;
 import java.awt.event.InputEvent;
 import java.awt.event.MouseEvent;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 import java.nio.Buffer;
 import java.nio.ByteBuffer;
 import java.nio.FloatBuffer;
@@ -31,10 +32,6 @@ import org.jzy3d.plot3d.rendering.lights.Attenuation;
 import org.jzy3d.plot3d.rendering.lights.LightModel;
 import org.jzy3d.plot3d.rendering.lights.MaterialProperty;
 import org.jzy3d.plot3d.rendering.view.View;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
 import opengl.ubuntu.v20.glutDisplayFunc$callback;
 import opengl.ubuntu.v20.glutIdleFunc$callback;
 import opengl.ubuntu.v20.glutMotionFunc$callback;
@@ -42,16 +39,18 @@ import opengl.ubuntu.v20.glutMouseFunc$callback;
 import opengl.ubuntu.v20.glutReshapeFunc$callback;
 import opengl.ubuntu.v20.glut_h;
 
+
+
 public class PanamaGLPainter_Ubuntu_20_04 extends AbstractPainter implements PanamaGLPainter{
   static Logger logger = Logger.getLogger(PanamaGLPainter_Ubuntu_20_04.class);
 
-  ResourceScope scope;
+  MemorySession scope;
   SegmentAllocator allocator;
 
   public PanamaGLPainter_Ubuntu_20_04() {
     try {
-      scope = ResourceScope.newConfinedScope();
-      allocator = SegmentAllocator.ofScope(scope);
+      scope = MemorySession.openConfined();
+      allocator = SegmentAllocator.newNativeArena(scope);
     } catch (Exception e) {
       e.printStackTrace();
       System.err.println(e);
@@ -60,32 +59,39 @@ public class PanamaGLPainter_Ubuntu_20_04 extends AbstractPainter implements Pan
   
   /////////////////////////////////////////////
   
-  public ResourceScope getScope() {
+  @Override
+  public MemorySession getScope() {
     return scope;
   }
 
+  @Override
   public SegmentAllocator getAllocator() {
     return allocator;
   }
 
+  @Override
   public MemorySegment alloc(double[] value) {
-    return allocator.allocateArray(C_DOUBLE, value);
+    return allocator.allocateArray(ValueLayout.JAVA_DOUBLE, value);
   }
 
+  @Override
   public MemorySegment alloc(float[] value) {
-    return allocator.allocateArray(C_FLOAT, value);
+    return allocator.allocateArray(ValueLayout.JAVA_FLOAT, value);
   }
 
+  @Override
   public MemorySegment alloc(int[] value) {
-    return allocator.allocateArray(C_INT, value);
+    return allocator.allocateArray(ValueLayout.JAVA_INT, value);
   }
 
+  @Override
   public MemorySegment alloc(String value) {
-    return CLinker.toCString(value, scope);
+    return allocator.allocateUtf8String(value);
   }
 
+  @Override
   public String glGetString(int stringID){
-    return CLinker.toJavaString(glut_h.glGetString(stringID));
+    return glut_h.glGetString(stringID).getUtf8String(0);
   }
 
   /////////////////////////////////////////////
@@ -97,7 +103,7 @@ public class PanamaGLPainter_Ubuntu_20_04 extends AbstractPainter implements Pan
     var renderer = canvas.getRenderer();
     var scope = painter.getScope();
     var allocator = painter.getAllocator();
-    var argc = allocator.allocate(C_INT, 0);
+    var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
 
     // GLUT Init window
     // https://github.com/jzy3d/panama-gl/issues/16
@@ -105,7 +111,7 @@ public class PanamaGLPainter_Ubuntu_20_04 extends AbstractPainter implements Pan
 
     glut_h.glutInitDisplayMode(glut_h.GLUT_DOUBLE() | glut_h.GLUT_RGB() | glut_h.GLUT_DEPTH());
     glut_h.glutInitWindowSize(bounds.width, bounds.height);
-    glut_h.glutCreateWindow(CLinker.toCString(title + "/" + message, scope));
+    glut_h.glutCreateWindow(alloc(title + "/" + message));
 
     // GLUT Display/Idle callback
     glut_h.glutDisplayFunc(glutDisplayFunc$callback.allocate(renderer::display, scope));
@@ -1244,12 +1250,12 @@ public class PanamaGLPainter_Ubuntu_20_04 extends AbstractPainter implements Pan
 
   @Override
   public void glSelectBuffer(int size, IntBuffer buffer) {
-    glut_h.glSelectBuffer(size, allocator.allocateArray(C_INT, buffer.array()));
+    glut_h.glSelectBuffer(size, allocator.allocateArray(ValueLayout.JAVA_INT, buffer.array()));
   }
 
   @Override
   public void gluPickMatrix(double x, double y, double delX, double delY, int[] viewport, int viewport_offset) {
-    glut_h.gluPickMatrix(x, y, delX, delY, allocator.allocateArray(C_INT, viewport));
+    glut_h.gluPickMatrix(x, y, delX, delY, allocator.allocateArray(ValueLayout.JAVA_INT, viewport));
   }
 
   @Override
